--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "repository": "yoshuawuyts/nanographql",
   "version": "1.1.0",
   "scripts": {
-    "deps": "dependency-check . && dependency-check . --extra --no-dev",
     "start": "node .",
-    "test": "standard && npm run deps"
+    "test": "standard && node test"
   },
   "dependencies": {},
   "devDependencies": {
-    "dependency-check": "^2.9.1",
     "spok": "^0.8.1",
     "standard": "^10.0.2",
     "tape": "^4.7.0"
