--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "nanographql",
-  "description": "Tiny graphQL client library",
-  "repository": "yoshuawuyts/nanographql",
-  "version": "2.0.0",
+  "name": "micrographql",
+  "description": "Small graphQL client library",
+  "repository": "Meettya/micrographql",
+  "version": "2.1.0",
   "scripts": {
     "start": "node .",
     "test": "standard && node test"
   },
   "dependencies": {},
   "devDependencies": {
-    "spok": "^0.8.1",
-    "standard": "^10.0.2",
-    "tape": "^4.7.0"
+    "standard": "^12.0.1",
+    "tape": "^4.9.2"
   },
   "keywords": [
     "graphql",
-    "small",
-    "nano"
+    "small"
   ],
   "license": "MIT"
 }
